--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    // <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" href="elec.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prepaid Electricity Tracker</title>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -651,3 +652,4 @@
     </script>
   </body>
 </html>
+
