--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="elec.ico" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="192x192" href="cropped.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prepaid Electricity Tracker</title>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -651,5 +652,6 @@
     </script>
   </body>
 </html>
+
 
 
